--- a/html/menu.html
+++ b/html/menu.html
@@ -31,8 +31,118 @@
   <!-- Début Main -->
   <main class="container__main__menu">
 
+    <!-- Début banner -->
+    <div class="container__main__menu__block">
+      <!-- <div class="container__main__menu__block__banner">
+        <img src="../assets/images/restaurants/La-palette-du-goût.jpg" alt="images La-palette-du-goût" />
+      </div> -->
+    </div>
+    <!-- Fin banner -->
+    
     <!-- Début Section 1 -->
-   
+    <section class="container__main__menu__section1">
+      <!-- <div class="container__main__menu__section1__backround">
+        <div class="container__main__menu__section1__backround__title">
+          <h3>La palette du goût</h3>
+          <i class="fa-regular fa-heart"></i>
+        </div>
+        <div class="container__main__menu__section1__backround__blocks">
+          <div class="container__main__menu__section1__backround__blocks__block">
+            <h4>ENTRÉES</h4>
+            <div class="container__main__menu__section1__backround__blocks__block__card">
+              <div class="container__main__menu__section1__backround__blocks__block__card__text">
+                <h5>Fricassée d'escargots</h5>
+                <p>Au piment d'Espelette</p>
+              </div>
+              <div class="container__main__menu__section1__backround__blocks__block__card__price">
+                <span>25€</span>
+              </div>
+            </div>
+            <div class="container__main__menu__section1__backround__blocks__block__card">
+              <div class="container__main__menu__section1__backround__blocks__block__card__text">
+                <h5>Foie gras de canard mi-cuit</h5>
+                <p>Et ses copeaux de truffe noire</p>
+              </div>
+              <div class="container__main__menu__section1__backround__blocks__block__card__price">
+                <span>35€</span>
+              </div>
+            </div>
+            <div class="container__main__menu__section1__backround__blocks__block__card">
+              <div class="container__main__menu__section1__backround__blocks__block__card__text">
+                <h5>Œuf au plat</h5>
+                <p>Assaisonné à la truffe sur lit de caviar</p>
+              </div>
+              <div class="container__main__menu__section1__backround__blocks__block__card__price">
+                <span>20€</span>
+              </div>
+            </div>
+          </div>
+          <div class="container__main__menu__section1__backround__blocks__block">
+            <h4>PLATS</h4>
+            <div class="container__main__menu__section1__backround__blocks__block__card">
+              <div class="container__main__menu__section1__backround__blocks__block__card__text">
+                <h5>Filet de bœuf aux herbes</h5>
+                <p>Accompagné de sa ribambelle de légumes</p>
+              </div>
+              <div class="container__main__menu__section1__backround__blocks__block__card__price">
+                <span>40€</span>
+              </div>
+            </div>
+            <div class="container__main__menu__section1__backround__blocks__block__card">
+              <div class="container__main__menu__section1__backround__blocks__block__card__text">
+                <h5>Parmentier de queue de bœuf</h5>
+                <p>À la truffe noire sur sa purée de panais</p>
+              </div>
+              <div class="container__main__menu__section1__backround__blocks__block__card__price">
+                <span>35€</span>
+              </div>
+            </div>
+            <div class="container__main__menu__section1__backround__blocks__block__card">
+              <div class="container__main__menu__section1__backround__blocks__block__card__text">
+                <h5>Filet de turbot</h5>
+                <p>Aux agrumes</p>
+              </div>
+              <div class="container__main__menu__section1__backround__blocks__block__card__price">
+                <span>44€</span>
+              </div>
+            </div>
+          </div>
+          <div class="container__main__menu__section1__backround__blocks__block">
+            <h4>DESSERTS</h4>
+            <div class="container__main__menu__section1__backround__blocks__block__card">
+              <div class="container__main__menu__section1__backround__blocks__block__card__text">
+                <h5>Paris-Brest</h5>
+                <p>Revisité</p>
+              </div>
+              <div class="container__main__menu__section1__backround__blocks__block__card__price">
+                <span>18€</span>
+              </div>
+            </div>
+            <div class="container__main__menu__section1__backround__blocks__block__card">
+              <div class="container__main__menu__section1__backround__blocks__block__card__text">
+                <h5>Macaron au chocolat d'exception</h5>
+                <p>Et glace à la vanille de Madagascar</p>
+              </div>
+              <div class="container__main__menu__section1__backround__blocks__block__card__price">
+                <span>22€</span>
+              </div>
+            </div>
+            <div class="container__main__menu__section1__backround__blocks__block__card">
+              <div class="container__main__menu__section1__backround__blocks__block__card__text">
+                <h5>Mousse au chocolat</h5>
+                <p>Au piment d'Espelette et à la truffe noire</p>
+              </div>
+              <div class="container__main__menu__section1__backround__blocks__block__card__price">
+                <span>23€</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container__main__menu__section1__backround__btn">
+          <button>Commander</button>
+        </div>
+      </div> -->
+    </section>
     <!-- Fin Section 1 -->
 
     <!-- Début du footer -->
