mises en place animation

--- a/html/menu.html
+++ b/html/menu.html
@@ -28,6 +28,16 @@
   </header>
   <!-- Fin Header -->
 
+  <!-- Début Loader -->
+    <!-- <div class="loader">
+      <div class="loader__itemContainer">
+          <div class="loader__itemContainer__item loader__itemContainer__item--1"></div>
+          <div class="loader__itemContainer__item loader__itemContainer__item--2"></div>
+          <div class="loader__itemContainer__item loader__itemContainer__item--3"></div>
+      </div>
+    </div> -->
+  <!-- Fin Loader -->
+
   <!-- Début Main -->
   <main class="container__main__menu">
 
