--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
   </head>
   <!-- Fin du Head -->
   <body>
+    <!-- Début Loader -->
+    <div class="loader">
+        <div class="loader__itemContainer">
+            <div class="loader__itemContainer__item loader__itemContainer__item--1"></div>
+            <div class="loader__itemContainer__item loader__itemContainer__item--2"></div>
+            <div class="loader__itemContainer__item loader__itemContainer__item--3"></div>
+        </div>
+    </div>
+    <!-- Fin Loader -->
+
     <!-- Début Header -->
     <header class="container__header__homepage">
       <img src="./assets/images/logo/ohmyfood@2x.svg" alt="logo website" />
