mises à jour variable

--- a/html/menu.html
+++ b/html/menu.html
@@ -29,13 +29,13 @@
   <!-- Fin Header -->
 
   <!-- Début Loader -->
-    <!-- <div class="loader">
+    <div class="loader">
       <div class="loader__itemContainer">
           <div class="loader__itemContainer__item loader__itemContainer__item--1"></div>
           <div class="loader__itemContainer__item loader__itemContainer__item--2"></div>
           <div class="loader__itemContainer__item loader__itemContainer__item--3"></div>
       </div>
-    </div> -->
+    </div>
   <!-- Fin Loader -->
 
   <!-- Début Main -->
