--- a/html/menu.html
+++ b/html/menu.html
@@ -10,7 +10,7 @@
   />
   <link rel="stylesheet" href="../css/style.css" />
   <link rel="stylesheet" href="../fonts/icônes/css/all.css" />
-  <link rel="icon" href="./assets/images/logo/ohmyfood@2x.svg" />
+  <link rel="icon" href="../assets//images/logo/ohmyfood@2x.svg" />
   <title>Omyfood</title>
 
   <script type="module" src="../scripts/services/services.js"></script>
